# cli

./: .env.example  .gitignore  .mcp.json  123.bash  CICD_SETUP.md  DEVELOPMENT.md  README.md  RELEASE_NOTES.md  VERSION_TEST_RESULTS.md  bun.lockb  debug_mcp.py  download-frpc.sh  package-lock.json  package.json  publish.sh  pymcp.py  pyproject.toml  release-notes.md  simple.js  simple2.js  simple_mcp_test.py  test_built_version.py  test_error_handling.py  test_health_check.py  test_invalid_token.py  test_mcp_client.py  test_mcp_direct.py  test_mcp_direct_comparison.py  test_mcp_simple.py  test_mcp_tools_comparison.py  test_minimal_client.py
.github/: INSTALLATION_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: build-release.yml  build-release.yml.tmp
docs/: README.md  health-checks.md  installation.md  integrations.md  mcp-real-ai-examples.md  mcp-setup.md  mcp-test-management.md  updates-feed.md  usage.md
examples/: simple-prompts.md
scripts/: build-release.sh  build.sh  generate-mcp-docs.sh  manual-release.sh  publish.sh  release.sh  test-build.sh
src/: index.js  keywords.js  mcp.js  utils.js
src/commands/: agent.js  delete.js  deploy.js  frpc.js  health.js  install.js  keywords.js  mcp.js  metrics.js  proxy.js  status.js  test.js  undo.js  update.js  version.js
src/mcp/: artifacts.js  browser-tasks.js  command-queue.js  documentation.js  exploratory.js  formatResultAsMarkdown.js  healthchecks.js  proxy.js  (+6 more)
tests/: README.md  pyproject.toml  setup.sh  test_health_check.py  test_minimal_mcp.js  version_utils.py
(+28 files in other folders)
