[project]
name = "helpmetest-cli-tests"
version = "0.1.0"
description = "Python test suite for HelpMeTest CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai[mcp]>=0.3.1",
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
